--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.56.3",
     "prettier": "^1.18.2",
-    "react-test-renderer": "16.9.0"
+    "react-test-renderer": "16.9.0",
+    "react-native-dotenv": "^0.2.0"
   },
   "jest": {
     "preset": "react-native"
