--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "metro-react-native-babel-preset": "^0.56.3",
     "prettier": "^1.18.2",
     "react-test-renderer": "16.9.0",
-    "react-native-dotenv": "^0.2.0"
+    "react-native-dotenv": "^0.2.0",
+    "ws": ">=3.3.1"
   },
   "jest": {
     "preset": "react-native"
